# anisotropic-temperature

./: CMakeLists.txt  README.md  animate-results.py  anisotropic-temperature.cxx  normalisations.lyx
data/: BOUT.inp
